# Shijima-Wii

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-release.sh  build.sh
.github/workflows/: build.yaml
Shijima-Wii/: meta.xml
docker/: Dockerfile
source/: font.hpp  main.cc
